# grotesque.ai

./: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  recover_vscode.py  requirements.txt  run_covert.vbs  start  test_whisper.py
config/: config.yaml
core/: __init__.py  audio_capture.py  audio_loopback.py  audio_playback.py  buffers.py  gui.py  intent_router.py  llm.py  memory.py  monitor_window.py  pipeline.py  security.py  stt.py  supervisor.py  tts.py  vad.py  wake_word.py  watchdog.py
core/plugins/: __init__.py  engine.py
core/plugins/builtin/: __init__.py  audio_context.py  media_control.py  settings.py  system_query.py  timer_alarm.py
docs/: ARCHITECTURE.md  DEPLOYMENT.md
models/: .gitkeep
scripts/: benchmark.py  build_llama_cpp.ps1  download_models.py  setup.ps1  stress_test.py
service/: __init__.py  install_service.py  windows_service.py
