[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "grotesque-ai"
version = "1.0.0"
description = "Fully local, real-time, GPU-accelerated voice assistant"
requires-python = ">=3.10,<3.13"
license = {text = "Proprietary"}

[project.scripts]
grotesque = "main:main"

[tool.setuptools.packages.find]
where = ["."]
